ingress/traefik-comall-daemo.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-comall-demo
  namespace: comall
spec:
  rules:
  - host: demo.pf.co-mall
    http:
      paths:
      - path: /
        backend:
          serviceName: demo
          servicePort: 8080
