ingress/traefik-monitor-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-monitor-grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.pf.co-mall
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
