ingress/traefik-monitor-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-monitor-prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.pf.co-mall
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
