ingress/traefik-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-my-nginx
  namespace: default
spec:
  rules:
  - host: my-nginx.pf.co-mall
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
